--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/master.css" media="all" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" media="all" type="text/css">
     <title>The Kirsch Portfolio</title>
   </head>
   <body>
+    <div class="welcome-container panel panel-success">
+      <div class="col-md-4">
+        <!-- <img src="img/old-man.gif" alt="A drawing of the Old Man in the Mountain" /> -->
+        <img src="img/old-man-rl.jpg" alt="A picture of the Old Man in the Mountain" class="contain-image"/>
+      </div>
+      <div class="col-md-8">
+        <h1>Sam Kirsch</h1>
+        <h3>Aspiring Developer</h3>
+      </div>
+
+    </div>
 
   </body>
 </html>
