add an about me section and the beginnings of a project link section

--- a/index.html
+++ b/index.html
@@ -6,14 +6,32 @@
     <title>The Kirsch Portfolio</title>
   </head>
   <body>
-    <div class="welcome-container panel panel-success">
+    <div class="welcome container panel panel-success">
       <div class="col-md-4">
         <!-- <img src="img/old-man.gif" alt="A drawing of the Old Man in the Mountain" /> -->
         <img src="img/old-man-rl.jpg" alt="A picture of the Old Man in the Mountain" class="contain-image"/>
       </div>
       <div class="col-md-8">
-        <h1>Sam Kirsch</h1>
-        <h3>Aspiring Developer</h3>
+        <h1 class="panel panel-heading">Sam Kirsch</h1>
+        <!-- <h3>Aspiring Developer</h3> -->
+      </div>
+    </div>
+    <div class="about container panel panel-default">
+      <h2>About Me</h2>
+        <p>
+          I am an epicodus student aspiring to become a profession developer, currently most interested in back-end applications but new enough to the field of programming that most things hold fresh magic.
+        </p>
+    </div>
+    <div class="projects container">
+      <h3>Check out these projects I've built as part of learning to code</h3>
+      <div class="project">
+        <div class="proj-img col-md-8">
+          <ul>A Resort Website
+            <li>A website made for a fictional resort, advertising</li>
+            <li>Written in HTML</li>
+          </ul>
+        </div>
+
       </div>
 
     </div>
