add more content and formatting to the projects section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="welcome container panel panel-success">
       <div class="col-md-4">
         <!-- <img src="img/old-man.gif" alt="A drawing of the Old Man in the Mountain" /> -->
-        <img src="img/old-man-rl.jpg" alt="A picture of the Old Man in the Mountain" class="contain-image"/>
+        <img src="img/old-man-rl.jpg" alt="A picture of the Old Man in the Mountain" class="contain-image img-sculpt"/>
       </div>
       <div class="col-md-8">
         <h1 class="panel panel-heading">Sam Kirsch</h1>
@@ -25,11 +25,14 @@
     <div class="projects container">
       <h3>Check out these projects I've built as part of learning to code</h3>
       <div class="project">
-        <div class="proj-img col-md-8">
+        <div class="proj-desc col-md-6">
           <ul>A Resort Website
-            <li>A website made for a fictional resort, advertising</li>
+            <li>A website made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
             <li>Written in HTML</li>
           </ul>
+        </div>
+        <div class="proj-img col-md-6">
+          <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
         </div>
 
       </div>
