add more rows and columns to the projects section, along with formatting changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,67 @@
     </div>
     <div class="projects container">
       <h3>Check out these projects I've built as part of learning to code</h3>
-      <div class="project">
+      <div class="row proj-row">
+        <div class="col-md-4 proj-col">
+          <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
+          <p>A Resort Website</p>
+          <ul>
+            <li>A website made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
+            <li>Written in HTML</li>
+          </ul>
+        </div>
+        <div class="col-md-4 proj-col">
+          <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
+          <p>A Resort Website</p>
+          <ul>
+            <li>A website made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
+            <li>Written in HTML</li>
+          </ul>
+        </div>
+        <div class="col-md-4 proj-col">
+          <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
+          <p>A Resort Website</p>
+          <ul>
+            <li>A website made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
+            <li>Written in HTML</li>
+          </ul>
+        </div>
+
+      </div>
+      <div class="row proj-row">
+        <div class="col-md-4 proj-col">
+          <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
+          <p>A Resort Website</p>
+          <ul>
+            <li>A website made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
+            <li>Written in HTML</li>
+          </ul>
+        </div>
+        <div class="col-md-4 proj-col">
+          <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
+          <p>A Resort Website</p>
+          <ul>
+            <li>A website made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
+            <li>Written in HTML</li>
+          </ul>
+        </div>
+        <div class="col-md-4 proj-col">
+          <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
+          <p>A Resort Website</p>
+          <ul>
+            <li>A website made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
+            <li>Written in HTML</li>
+          </ul>
+        </div>
+
+      </div>
+
+
+
+
+
+
+      <!-- <div class="project">
         <div class="proj-desc col-md-6">
           <ul>A Resort Website
             <li>A website made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
@@ -35,7 +95,7 @@
           <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
         </div>
 
-      </div>
+      </div> -->
 
     </div>
 
