--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css" media="all" type="text/css">
     <title>The Kirsch Portfolio</title>
@@ -14,6 +15,9 @@
       <div class="col-md-8">
         <h1 class="panel panel-heading">Sam Kirsch</h1>
         <!-- <h3>Aspiring Developer</h3> -->
+        <p>
+          <a href="resume.html">test link to resume</a>
+        </p>
       </div>
     </div>
     <div class="about container panel panel-default">
