alter alignment of the projects, differentiate the content, and adjust the styling

--- a/index.html
+++ b/index.html
@@ -23,14 +23,18 @@
     <div class="about container panel panel-default">
       <h2>About Me</h2>
         <p>
-          I am an epicodus student aspiring to become a profession developer, currently most interested in back-end applications but new enough to the field of programming that most things hold fresh magic.
+          I am an epicodus student aspiring to become a professional developer, currently most interested in back-end applications but new enough to the field of programming that most things hold fresh magic.
         </p>
     </div>
     <div class="projects container">
       <h3>Check out these projects I've built as part of learning to code</h3>
       <div class="row proj-row">
         <div class="col-md-4 proj-col">
-          <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
+          <div class="proj-img-container">
+            <a href="https://github.com/denalisk/resort">
+              <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
+          </div>
+          </a>
           <p>A Resort Website</p>
           <ul>
             <li>A website made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
@@ -38,18 +42,26 @@
           </ul>
         </div>
         <div class="col-md-4 proj-col">
-          <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
-          <p>A Resort Website</p>
+          <div class="proj-img-container">
+            <a href="https://github.com/denalisk/lecture">
+              <img class="img-sculpt contain-image" src="img/lecture2.png" alt="A screenshot of the homepage" />
+          </div>
+          </a>
+          <p>A Boring Lecture</p>
           <ul>
-            <li>A website made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
+            <li>A simple website made to practice utilizing lorem ipsum text, with a simple format and intra-page anchors.</li>
             <li>Written in HTML</li>
           </ul>
         </div>
         <div class="col-md-4 proj-col">
-          <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
-          <p>A Resort Website</p>
+          <div class="proj-img-container">
+            <a href="https://github.com/denalisk/cupcake">
+              <img class="img-sculpt contain-image" src="img/cupcake.png" alt="A screenshot of the homepage" />
+          </div>
+          </a>
+          <p>A Cupcake Website</p>
           <ul>
-            <li>A website made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
+            <li>A website made for a fictional bakery, showcasing a variety of cupcakes.</li>
             <li>Written in HTML</li>
           </ul>
         </div>
@@ -57,33 +69,47 @@
       </div>
       <div class="row proj-row">
         <div class="col-md-4 proj-col">
-          <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
-          <p>A Resort Website</p>
+          <div class="proj-img-container">
+            <a href="https://github.com/denalisk/interior">
+              <img class="img-sculpt contain-image" src="img/interior.png" alt="A screenshot of the homepage" />
+          </div>
+          </a>
+          <p>An Interior Design Website</p>
           <ul>
-            <li>A website made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
+            <li>A simple website made for a fictional interior design agency.</li>
             <li>Written in HTML</li>
           </ul>
         </div>
         <div class="col-md-4 proj-col">
-          <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
-          <p>A Resort Website</p>
+          <div class="proj-img-container">
+            <a href="https://github.com/denalisk/shelter">
+              <img class="img-sculpt contain-image" src="img/shelter.png" alt="A screenshot of the homepage" />
+          </div>
+          </a>
+          <p>An Animal Shelter Website</p>
           <ul>
-            <li>A website made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
+            <li>A website made for a fictional animal shelter to practice with divs, floats, and media queries. Best viewed on a large screen.</li>
             <li>Written in HTML</li>
           </ul>
         </div>
         <div class="col-md-4 proj-col">
-          <img class="img-sculpt contain-image" src="img/resort.png" alt="A screenshot of the homepage" />
-          <p>A Resort Website</p>
+          <div class="proj-img-container">
+            <a href="https://github.com/denalisk/wiki">
+              <img class="img-sculpt contain-image" src="img/wiki1.png" alt="A screenshot of the homepage" />
+          </div>
+          </a>
+          <p>An Attempted Wikipedia Rebuild</p>
           <ul>
-            <li>A website made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
+            <li>A website attempting to reproduce the styling on the wikipedia homepage using basic bootstrap CSS elements.</li>
             <li>Written in HTML</li>
           </ul>
         </div>
 
       </div>
 
+<div class="proj-img-container">
 
+</div>
 
 
 
