--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" href="css/styles.css" media="all" type="text/css">
     <title>The Kirsch Portfolio</title>
   </head>
-  <body>
+  <body class="index">
     <div class="welcome container panel panel-success">
       <div class="col-md-4">
-        <!-- <img src="img/old-man.gif" alt="A drawing of the Old Man in the Mountain" /> -->
         <img src="img/old-man-rl.jpg" alt="A picture of the Old Man in the Mountain" class="contain-image img-sculpt"/>
       </div>
       <div class="col-md-8">
@@ -21,10 +20,27 @@
       </div>
     </div>
     <div class="about container panel panel-default">
-      <h2>About Me</h2>
-        <p>
-          I am an epicodus student aspiring to become a professional developer, currently most interested in back-end applications but new enough to the field of programming that most things hold fresh magic.
-        </p>
+      <div class="banner">
+        <h2><em class="required">About Me</em></h2>
+      </div>
+      <p>
+        I am an epicodus student <span class="required">aspiring</span> to become a professional developer, new enough to the field of programming that most things hold <span class="required">fresh magic</span>.
+      </p>
+      <p>
+        I graduated from <strong class="required">Whitman College</strong> in 2014, and have spent all my summers since working on wildland fire crews in Colorado and Oregon. Wildland firefighting is seasonal work, so I spent my winters travelling, skiing, backpacking, and trying to teach myself skills that would provide more consistent employment than just being good with a chainsaw and shovel. I stumbled across coding, and taught myself a bit of python before deciding that programming was a field I would enjoy pursuing further.
+      </p>
+      <ol class="required">Some of my favorite things, in no particular order:
+        <li>Outdoor endeavors</li>
+        <li>Literary pursuits</li>
+        <li>Biking through traffic</li>
+        <li>Games of all sorts</li>
+      </ol>
+      <p>
+        I'm incredibly excited for Epicodus and so far have been blown away by the pace of learning and retention through the program.
+      </p>
+      <p>
+        <a href="resume.html">Check out my resume!</a>
+      </p>
     </div>
     <div class="projects container">
       <h3>Check out these projects I've built as part of learning to code</h3>
