--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,12 @@
     <title>The Kirsch Portfolio</title>
   </head>
   <body class="container">
-    <img src="img/resume.png" alt="A picture of Sam's resume" />
+    <div class="banner">
+      <a href="index.html" class="back-button">Back</a>
+    </div>
+    <div class="">
+      <img src="img/resume.png" alt="A picture of Sam's resume" title="NB: This is an old resume pulled from my email, thus listing me as 24 and missing some work experience. I'll update it when I have access to my other files."/>
+    </div>
 
   </body>
 </html>
