add information and styling to the resume page

--- a/resume.html
+++ b/resume.html
@@ -6,11 +6,18 @@
     <link rel="stylesheet" href="css/styles.css" media="all" type="text/css">
     <title>The Kirsch Portfolio</title>
   </head>
-  <body class="container">
+  <body>
     <div class="banner">
-      <a href="index.html" class="back-button">Back</a>
+      <h2 class="back-button"><a href="index.html">Back</a></h2>
     </div>
-    <div class="">
+    <div class="resume-info panel-success">
+      <h3 class="panel-heading">Sam Kirsch Resume</h3>
+      <ul class="simple-list panel">
+        <li>Email: sampleemail@email.com</li>
+        <li>Phone: 555-555-5555</li>
+      </ul>
+    </div>
+    <div class="center-align">
       <img src="img/resume.png" alt="A picture of Sam's resume" title="NB: This is an old resume pulled from my email, thus listing me as 24 and missing some work experience. I'll update it when I have access to my other files."/>
     </div>
 
