tweak image sizing constraints to be more friendly to browser resizing

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
       </div>
       <div class="col-md-8">
         <h1 class="panel panel-heading">Sam Kirsch</h1>
-        <!-- <h3>Aspiring Developer</h3> -->
-        <p>
-          <a href="resume.html">test link to resume</a>
-        </p>
+        <h3 class="indent">Developing Developer</h3>
       </div>
     </div>
     <div class="about container panel panel-default">
@@ -60,7 +57,7 @@
         <div class="col-md-4 proj-col">
           <div class="proj-img-container">
             <a href="https://github.com/denalisk/lecture">
-              <img class="img-sculpt contain-image" src="img/lecture2.png" alt="A screenshot of the homepage" />
+              <img class="img-sculpt contain-image" src="img/lecture.png" alt="A screenshot of the homepage" />
           </div>
           </a>
           <p>A Boring Lecture</p>
@@ -72,7 +69,7 @@
         <div class="col-md-4 proj-col">
           <div class="proj-img-container">
             <a href="https://github.com/denalisk/cupcake">
-              <img class="img-sculpt contain-image" src="img/cupcake.png" alt="A screenshot of the homepage" />
+              <img class="img-sculpt contain-image" src="img/cupcakes.png" alt="A screenshot of the homepage" />
           </div>
           </a>
           <p>A Cupcake Website</p>
