add rows and columns to format the content and implement the actual photos. Also, this will add a background image to the welcome banner.

--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="css/styles.css" media="all" type="text/css">
   </head>
   <body>
-    <h1>Sam Kirsch</h1>
-    <h2>Developing Developer</h2>
-    <div class="about">
+    <div class="welcome">
+      <img class="circle-img" src="img/old-man-rl.jpg" alt="A picture of the old man in the mountain" />
+      <h1>Sam Kirsch</h1>
+      <h2>Developing Developer</h2>
+    </div>
+    <div class="about col-md-3">
       <h2>About Me</h2>
       <p>
         I am an epicodus student aspiring to become a professional developer, new enough to the field of programming that most things hold fresh magic.
@@ -30,73 +33,79 @@
         <a href="resume.html">Check out my resume!</a>
       </p>
     </div>
-    <div class="projects">
+    <div class="projects col-md-9">
       <h3>Here are some examples of projects I've worked on while learning to code.</h3>
-      <div class="project">
-        <h4>The Whoville Hotel</h4>
-        <img src="#img/resort.png" alt="A picture of a webpage" />
-        <p>Resort Website</p>
-        <ul>
-          <li>A site made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
-          <li>Written in HTML</li>
-        </ul>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="project">
+            <h4>The Whoville Hotel</h4>
+            <img src="img/resort.png" alt="A picture of a webpage" />
+            <p>Resort Website</p>
+            <ul>
+              <li>A site made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
+              <li>Written in HTML</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="project">
+            <h4>Prof. Somnus's Lecture Series</h4>
+            <img src="img/lecture.png" alt="A picture of a webpage" />
+            <p>Boring Lecture Site</p>
+            <ul>
+              <li>A simple website made to practice utilizing lorem ipsum text, with a simple format and intra-page anchors.</li>
+              <li>Written in HTML</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="project">
+            <h4>Themed Cupcakes</h4>
+            <img src="img/cupcakes.png" alt="A picture of a webpage" />
+            <p>Cupcakery Site</p>
+            <ul>
+              <li>A website made for a fictional bakery, showcasing a variety of cupcakes.</li>
+              <li>Written in HTML</li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <div class="project">
-        <h4>Prof. Somnus's Lecture Series</h4>
-        <img src="#img/resort.png" alt="A picture of a webpage" />
-        <p>Boring Lecture Site</p>
-        <ul>
-          <li>A simple website made to practice utilizing lorem ipsum text, with a simple format and intra-page anchors.</li>
-          <li>Written in HTML</li>
-        </ul>
-      </div>
-      <div class="project">
-        <h4>Themed Cupcakes</h4>
-        <img src="#img/resort.png" alt="A picture of a webpage" />
-        <p>Cupcakery Site</p>
-        <ul>
-          <li>A website made for a fictional bakery, showcasing a variety of cupcakes.</li>
-          <li>Written in HTML</li>
-        </ul>
-      </div>
-      <div class="project">
-        <h4>The Inner Design</h4>
-        <img src="#img/resort.png" alt="A picture of a webpage" />
-        <p>Interior Design Site</p>
-        <ul>
-          <li>A simple website made for a fictional interior design agency.</li>
-          <li>Written in HTML</li>
-        </ul>
-      </div>
-      <div class="project">
-        <h4>Helter Shelter</h4>
-        <img src="#img/shelter.png" alt="A picture of a webpage" />
-        <p>Animal Shelter Site</p>
-        <ul>
-          <ul>
-            <li>A website made for a fictional animal adoption agency to practice with divs, floats, and media queries. Best viewed on a large screen.</li>
-            <li>Written in HTML</li>
-          </ul>
-        </ul>
-      </div>
-      <div class="project">
-        <h4>The Whoville Hotel</h4>
-        <img src="#img/resort.png" alt="A picture of a webpage" />
-        <p>A Resort Website</p>
-        <ul>
-          <li>A site made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
-          <li>Written in HTML</li>
-        </ul>
-      </div>
-      <div class="project">
-        <h4>Wiki Redux</h4>
-        <img src="#img/resort.png" alt="A picture of a webpage" />
-        <p>Attempted Wikipedia Rebuild</p>
-        <ul>
-          <li>A website attempting to reproduce the styling on the wikipedia homepage using basic bootstrap CSS elements.</li>
-          <li>Written in HTML</li>
-        </ul>
-
+      <div class="row">
+        <div class="col-md-4">
+          <div class="project">
+            <h4>The Inner Design</h4>
+            <img src="img/interior.png" alt="A picture of a webpage" />
+            <p>Interior Design Site</p>
+            <ul>
+              <li>A simple website made for a fictional interior design agency.</li>
+              <li>Written in HTML</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="project">
+            <h4>Helter Shelter</h4>
+            <img src="img/shelter.png" alt="A picture of a webpage" />
+            <p>Animal Shelter Site</p>
+            <ul>
+              <ul>
+                <li>A website made for a fictional animal adoption agency to practice with divs, floats, and media queries. Best viewed on a large screen.</li>
+                <li>Written in HTML</li>
+              </ul>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="project">
+            <h4>Wiki Redux</h4>
+            <img src="img/wiki1.png" alt="A picture of a webpage" />
+            <p>Attempted Wikipedia Rebuild</p>
+            <ul>
+              <li>A website attempting to reproduce the styling on the wikipedia homepage using basic bootstrap CSS elements.</li>
+              <li>Written in HTML</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
     <h6>Thanks for visiting. Copyright (c) 2017 Sam Kirsch and other attributed authors. Licensed under the MIT license.</h6>
