--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="banner">
-      <h2 class="back-button"><a href="index.html">Back</a></h2>
+      <h2 class="back-button"><a href="projects.html">Back</a></h2>
     </div>
     <div class="resume-info panel-success">
       <h3 class="panel-heading">Sam Kirsch Resume</h3>
