add formatting changes to the welcome bar, centering text and making it more readable

--- a/projects.html
+++ b/projects.html
@@ -8,9 +8,13 @@
   </head>
   <body>
     <div class="welcome">
-      <img class="circle-img" src="img/old-man-rl.jpg" alt="A picture of the old man in the mountain" />
-      <h1>Sam Kirsch</h1>
-      <h2>Developing Developer</h2>
+      <div class="center-align">
+        <img class="circle-img" src="img/old-man-rl.jpg" alt="A picture of the old man in the mountain" />
+      </div>
+      <div class="slide-up">
+        <h1 class="spread center-align"><strong>Sam Kirsch</strong></h1>
+        <h2 class="spread center-align"><em>Developing Developer</em></h2>
+      </div>
     </div>
     <div class="about col-md-3">
       <h2>About Me</h2>
