--- a/projects.html
+++ b/projects.html
@@ -16,34 +16,36 @@
         <h2 class="spread center-align"><em>Developing Developer</em></h2>
       </div>
     </div>
-    <div class="about col-md-3">
-      <h2>About Me</h2>
-      <p>
-        I am an epicodus student aspiring to become a professional developer, new enough to the field of programming that most things hold fresh magic.
-      </p>
-      <p>
-        I graduated from Whitman College in 2014, and have spent all my summers since working on wildland fire crews in Colorado and Oregon. Wildland firefighting is seasonal work, so I spent my winters travelling, skiing, backpacking, and trying to teach myself skills that would provide more consistent employment than just being good with a chainsaw and shovel. I stumbled across coding, and taught myself a bit of python before deciding that programming was a field I would enjoy pursuing further.
-      </p>
-      <ol>Some of my favorite things, in no particular order:
-        <li>Outdoor endeavors</li>
-        <li>Literary pursuits</li>
-        <li>Biking through traffic</li>
-        <li>Games of all sorts</li>
-      </ol>
-      <p>
-        I'm incredibly excited for Epicodus and so far have been blown away by the pace of learning and retention through the program.
-      </p>
+    <div class="about col-sm-3 panel panel-primary">
+      <h2 class="panel-heading">About Me</h2>
+      <div class="panel-body panel-primary">
+        <p>
+          I am an epicodus student aspiring to become a professional developer, new enough to the field of programming that most things hold fresh magic.
+        </p>
+        <p>
+          I graduated from Whitman College in 2014, and have spent all my summers since working on wildland fire crews in Colorado and Oregon. Wildland firefighting is seasonal work, so I spent my winters travelling, skiing, backpacking, and trying to teach myself skills that would provide more consistent employment than just being good with a chainsaw and shovel. I stumbled across coding, and taught myself a bit of python before deciding that programming was a field I would enjoy pursuing further.
+        </p>
+        <ol>Some of my favorite things, in no particular order:
+          <li>Outdoor endeavors</li>
+          <li>Literary pursuits</li>
+          <li>Biking through traffic</li>
+          <li>Games of all sorts</li>
+        </ol>
+        <p>
+          I'm incredibly excited for Epicodus and so far have been blown away by the pace of learning and retention through the program.
+        </p>
+      </div>
       <p>
         <a href="resume.html">Check out my resume!</a>
       </p>
     </div>
-    <div class="projects col-md-9">
+    <div class="projects col-sm-9">
       <h3>Here are some examples of projects I've worked on while learning to code.</h3>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="project">
-            <h4>The Whoville Hotel</h4>
-            <img src="img/resort.png" alt="A picture of a webpage" />
+      <div class="row panel-group">
+        <div class="col-sm-4">
+          <div class="project panel-primary">
+            <h4 class="panel-heading">The Whoville Hotel</h4>
+            <a href="https://github.com/denalisk/resort"><img src="img/resort.png" alt="A picture of a webpage" /></a>
             <p>Resort Website</p>
             <ul>
               <li>A site made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
@@ -51,10 +53,10 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="project">
-            <h4>Prof. Somnus's Lecture Series</h4>
-            <img src="img/lecture.png" alt="A picture of a webpage" />
+        <div class="col-sm-4 middle-col">
+          <div class="project panel-primary">
+            <h4 class="panel-heading panel-primary">Prof. Somnus's Lecture Series</h4>
+            <a href="https://github.com/denalisk/lecture"><img src="img/lecture.png" alt="A picture of a webpage" /></a>
             <p>Boring Lecture Site</p>
             <ul>
               <li>A simple website made to practice utilizing lorem ipsum text, with a simple format and intra-page anchors.</li>
@@ -62,10 +64,10 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="project">
-            <h4>Themed Cupcakes</h4>
-            <img src="img/cupcakes.png" alt="A picture of a webpage" />
+        <div class="col-sm-4">
+          <div class="project panel-primary">
+            <h4 class="panel-heading panel-primary">Themed Cupcakes</h4>
+            <a href="https://github.com/denalisk/cupcake"><img src="img/cupcakes.png" alt="A picture of a webpage" /></a>
             <p>Cupcakery Site</p>
             <ul>
               <li>A website made for a fictional bakery, showcasing a variety of cupcakes.</li>
@@ -75,10 +77,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
-          <div class="project">
-            <h4>The Inner Design</h4>
-            <img src="img/interior.png" alt="A picture of a webpage" />
+        <div class="col-sm-4">
+          <div class="project panel-primary">
+            <h4 class="panel-heading panel-primary">The Inner Design</h4>
+            <a href="https://github.com/denalisk/interior"><img src="img/interior.png" alt="A picture of a webpage" /></a>
             <p>Interior Design Site</p>
             <ul>
               <li>A simple website made for a fictional interior design agency.</li>
@@ -86,10 +88,10 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="project">
-            <h4>Helter Shelter</h4>
-            <img src="img/shelter.png" alt="A picture of a webpage" />
+        <div class="col-sm-4 middle-col">
+          <div class="project panel-primary">
+            <h4 class="panel-heading panel-primary">Helter Shelter</h4>
+            <a href="https://github.com/denalisk/shelter"><img src="img/shelter.png" alt="A picture of a webpage" /></a>
             <p>Animal Shelter Site</p>
             <ul>
               <ul>
@@ -99,10 +101,10 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="project">
-            <h4>Wiki Redux</h4>
-            <img src="img/wiki1.png" alt="A picture of a webpage" />
+        <div class="col-sm-4">
+          <div class="project panel-primary">
+            <h4 class="panel-heading panel-primary">Wiki Redux</h4>
+            <a href="https://github.com/denalisk/wiki"><img src="img/wiki1.png" alt="A picture of a webpage" /></a>
             <p>Attempted Wikipedia Rebuild</p>
             <ul>
               <li>A website attempting to reproduce the styling on the wikipedia homepage using basic bootstrap CSS elements.</li>
@@ -112,6 +114,6 @@
         </div>
       </div>
     </div>
-    <h6>Thanks for visiting. Copyright (c) 2017 Sam Kirsch and other attributed authors. Licensed under the MIT license.</h6>
+    <h6 class="required">Thanks for visiting. Copyright (c) 2017 Sam Kirsch and other attributed authors. Licensed under the MIT license.</h6>
   </body>
 </html>
