--- a/projects.html
+++ b/projects.html
@@ -16,100 +16,100 @@
         <h2 class="spread center-align"><em>Developing Developer</em></h2>
       </div>
     </div>
-    <div class="about col-sm-3 panel panel-primary">
-      <h2 class="panel-heading">About Me</h2>
-      <div class="panel-body panel-primary">
-        <p>
-          I am an epicodus student aspiring to become a professional developer, new enough to the field of programming that most things hold fresh magic.
-        </p>
-        <p>
-          I graduated from Whitman College in 2014, and have spent all my summers since working on wildland fire crews in Colorado and Oregon. Wildland firefighting is seasonal work, so I spent my winters travelling, skiing, backpacking, and trying to teach myself skills that would provide more consistent employment than just being good with a chainsaw and shovel. I stumbled across coding, and taught myself a bit of python before deciding that programming was a field I would enjoy pursuing further.
-        </p>
-        <ol>Some of my favorite things, in no particular order:
-          <li>Outdoor endeavors</li>
-          <li>Literary pursuits</li>
-          <li>Biking through traffic</li>
-          <li>Games of all sorts</li>
-        </ol>
-        <p>
-          I'm incredibly excited for Epicodus and so far have been blown away by the pace of learning and retention through the program.
+    <div class="general-pad">
+      <div class="about col-sm-3 panel panel-primary">
+        <h2 class="panel-heading">About Me</h2>
+        <div class="panel-body panel-primary">
+          <p>
+            I am an epicodus student aspiring to become a professional developer, bright-eyed and bushy tailed to the field of programming.
+          </p>
+          <p>
+            I graduated from Whitman College in 2014, and have spent all my summers since working on wildland fire crews in Colorado and Oregon. Wildland firefighting is seasonal work, so I spent my winters travelling, skiing, backpacking, and trying to teach myself skills that would provide more consistent employment than just being good with a chainsaw and shovel. I stumbled across coding, and taught myself a bit of python before deciding that programming was a field I would enjoy pursuing further.
+          </p>
+          <ol><span class="req-other">Some of my favorite things, in no particular order:</span>
+            <li>Outdoor endeavors</li>
+            <li>Literary pursuits</li>
+            <li>Biking through traffic</li>
+            <li>Games of all sorts</li>
+          </ol>
+          <p>
+            I'm incredibly excited for Epicodus and so far have been blown away by the pace of learning and retention through the program.
+          </p>
+        </div>
+        <p class="resume-link">
+          <a href="resume.html">Check out my resume!</a>
         </p>
       </div>
-      <p>
-        <a href="resume.html">Check out my resume!</a>
-      </p>
-    </div>
-    <div class="projects col-sm-9">
-      <h3>Here are some examples of projects I've worked on while learning to code.</h3>
-      <div class="row panel-group">
-        <div class="col-sm-4">
-          <div class="project panel-primary">
-            <h4 class="panel-heading">The Whoville Hotel</h4>
-            <a href="https://github.com/denalisk/resort"><img src="img/resort.png" alt="A picture of a webpage" /></a>
-            <p>Resort Website</p>
-            <ul>
-              <li>A site made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
-              <li>Written in HTML</li>
-            </ul>
+      <div class="projects col-sm-9">
+        <h3 class="proj-title">Here are some examples of projects I've worked on while learning to code:</h3>
+        <div class="row panel-group">
+          <div class="col-sm-4">
+            <div class="project panel-primary">
+              <h4 class="panel-heading">Resort Website</h4>
+              <a href="https://github.com/denalisk/resort"><img src="img/resort.png" alt="A picture of a webpage" /></a>
+              <p>The Whoville Hotel</p>
+              <ul>
+                <li>A site made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
+                <li>Written in HTML</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-4 middle-col">
+            <div class="project panel-primary">
+              <h4 class="panel-heading panel-primary">Boring Lecture Site</h4>
+              <a href="https://github.com/denalisk/lecture"><img src="img/lecture.png" alt="A picture of a webpage" /></a>
+              <p>Prof. Somnus's Lecture Series</p>
+              <ul>
+                <li>A simple website made to practice utilizing lorem ipsum text, with a simple format and intra-page anchors.</li>
+                <li>Written in HTML</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="project panel-primary">
+              <h4 class="panel-heading panel-primary">Cupcakery Site</h4>
+              <a href="https://github.com/denalisk/cupcake"><img src="img/cupcakes.png" alt="A picture of a webpage" /></a>
+              <p>Themed Cupcakes</p>
+              <ul>
+                <li>A website made for a fictional bakery, showcasing a variety of cupcakes.</li>
+                <li>Written in HTML</li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="col-sm-4 middle-col">
-          <div class="project panel-primary">
-            <h4 class="panel-heading panel-primary">Prof. Somnus's Lecture Series</h4>
-            <a href="https://github.com/denalisk/lecture"><img src="img/lecture.png" alt="A picture of a webpage" /></a>
-            <p>Boring Lecture Site</p>
-            <ul>
-              <li>A simple website made to practice utilizing lorem ipsum text, with a simple format and intra-page anchors.</li>
-              <li>Written in HTML</li>
-            </ul>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="project panel-primary">
+              <h4 class="panel-heading panel-primary">Interior Design Site</h4>
+              <a href="https://github.com/denalisk/interior"><img src="img/interior.png" alt="A picture of a webpage" /></a>
+              <p>The Inner Design</p>
+              <ul>
+                <li>A simple website made for a fictional interior design agency.</li>
+                <li>Written in HTML</li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="project panel-primary">
-            <h4 class="panel-heading panel-primary">Themed Cupcakes</h4>
-            <a href="https://github.com/denalisk/cupcake"><img src="img/cupcakes.png" alt="A picture of a webpage" /></a>
-            <p>Cupcakery Site</p>
-            <ul>
-              <li>A website made for a fictional bakery, showcasing a variety of cupcakes.</li>
-              <li>Written in HTML</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="project panel-primary">
-            <h4 class="panel-heading panel-primary">The Inner Design</h4>
-            <a href="https://github.com/denalisk/interior"><img src="img/interior.png" alt="A picture of a webpage" /></a>
-            <p>Interior Design Site</p>
-            <ul>
-              <li>A simple website made for a fictional interior design agency.</li>
-              <li>Written in HTML</li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-4 middle-col">
-          <div class="project panel-primary">
-            <h4 class="panel-heading panel-primary">Helter Shelter</h4>
-            <a href="https://github.com/denalisk/shelter"><img src="img/shelter.png" alt="A picture of a webpage" /></a>
-            <p>Animal Shelter Site</p>
-            <ul>
+          <div class="col-sm-4 middle-col">
+            <div class="project panel-primary">
+              <h4 class="panel-heading panel-primary">Animal Shelter Site</h4>
+              <a href="https://github.com/denalisk/shelter"><img src="img/shelter.png" alt="A picture of a webpage" /></a>
+              <p>Helter Shelter</p>
               <ul>
                 <li>A website made for a fictional animal adoption agency to practice with divs, floats, and media queries. Best viewed on a large screen.</li>
                 <li>Written in HTML</li>
               </ul>
-            </ul>
+            </div>
           </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="project panel-primary">
-            <h4 class="panel-heading panel-primary">Wiki Redux</h4>
-            <a href="https://github.com/denalisk/wiki"><img src="img/wiki1.png" alt="A picture of a webpage" /></a>
-            <p>Attempted Wikipedia Rebuild</p>
-            <ul>
-              <li>A website attempting to reproduce the styling on the wikipedia homepage using basic bootstrap CSS elements.</li>
-              <li>Written in HTML</li>
-            </ul>
+          <div class="col-sm-4">
+            <div class="project panel-primary">
+              <h4 class="panel-heading panel-primary">Attempted Wikipedia Rebuild</h4>
+              <a href="https://github.com/denalisk/wiki"><img src="img/wiki1.png" alt="A picture of a webpage" /></a>
+              <p>Wiki Redux</p>
+              <ul>
+                <li>A website attempting to reproduce the styling on the wikipedia homepage using basic bootstrap CSS elements.</li>
+                <li>Written in HTML</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
