remove extra files and populate the README.md

--- a/img/Kirsch Portfolio.htm
+++ b/img/Kirsch Portfolio.htm
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<!-- saved from url=(0058)file:///Users/Guest/Desktop/portfolio-lander/projects.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <title>Kirsch Portfolio</title>
-    <link rel="icon" href="img/favicon.ico">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css" media="all" type="text/css">
+    <link rel="icon" href="file:///Users/Guest/Desktop/portfolio-lander/img/favicon.ico">
+    <link rel="stylesheet" href="./Kirsch Portfolio_files/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Kirsch Portfolio_files/styles.css" media="all" type="text/css">
   </head>
   <body>
     <div class="welcome">
       <div class="center-align">
-        <img class="circle-img" src="img/old-man-rl.jpg" alt="A picture of the old man in the mountain" />
+        <img class="circle-img" src="./Kirsch Portfolio_files/old-man-rl.jpg" alt="A picture of the old man in the mountain">
       </div>
       <div class="slide-up">
         <h1 class="spread center-align"><strong>Sam Kirsch</strong></h1>
@@ -37,7 +37,7 @@
           </p>
         </div>
         <p class="resume-link">
-          <a href="resume.html">Check out my resume!</a>
+          <a href="file:///Users/Guest/Desktop/portfolio-lander/resume.html">Check out my resume!</a>
         </p>
       </div>
       <div class="projects col-sm-9">
@@ -46,7 +46,7 @@
           <div class="col-sm-4">
             <div class="project panel-primary">
               <h4 class="panel-heading">Resort Website</h4>
-              <a href="https://github.com/denalisk/resort"><img src="img/resort.png" alt="A picture of a webpage" /></a>
+              <a href="https://github.com/denalisk/resort"><img src="./Kirsch Portfolio_files/resort.png" alt="A picture of a webpage"></a>
               <p>The Whoville Hotel</p>
               <ul>
                 <li>A site made for a fictional resort, with various pages to help guests decide whether or not to visit.</li>
@@ -57,7 +57,7 @@
           <div class="col-sm-4 middle-col">
             <div class="project panel-primary">
               <h4 class="panel-heading panel-primary">Boring Lecture Site</h4>
-              <a href="https://github.com/denalisk/lecture"><img src="img/lecture.png" alt="A picture of a webpage" /></a>
+              <a href="https://github.com/denalisk/lecture"><img src="./Kirsch Portfolio_files/lecture.png" alt="A picture of a webpage"></a>
               <p>Prof. Somnus's Lecture Series</p>
               <ul>
                 <li>A simple website made to practice utilizing lorem ipsum text, with a simple format and intra-page anchors.</li>
@@ -68,7 +68,7 @@
           <div class="col-sm-4">
             <div class="project panel-primary">
               <h4 class="panel-heading panel-primary">Cupcakery Site</h4>
-              <a href="https://github.com/denalisk/cupcake"><img src="img/cupcakes.png" alt="A picture of a webpage" /></a>
+              <a href="https://github.com/denalisk/cupcake"><img src="./Kirsch Portfolio_files/cupcakes.png" alt="A picture of a webpage"></a>
               <p>Themed Cupcakes</p>
               <ul>
                 <li>A website made for a fictional bakery, showcasing a variety of cupcakes.</li>
@@ -81,7 +81,7 @@
           <div class="col-sm-4">
             <div class="project panel-primary">
               <h4 class="panel-heading panel-primary">Interior Design Site</h4>
-              <a href="https://github.com/denalisk/interior"><img src="img/interior.png" alt="A picture of a webpage" /></a>
+              <a href="https://github.com/denalisk/interior"><img src="./Kirsch Portfolio_files/interior.png" alt="A picture of a webpage"></a>
               <p>The Inner Design</p>
               <ul>
                 <li>A simple website made for a fictional interior design agency.</li>
@@ -92,7 +92,7 @@
           <div class="col-sm-4 middle-col">
             <div class="project panel-primary">
               <h4 class="panel-heading panel-primary">Animal Shelter Site</h4>
-              <a href="https://github.com/denalisk/shelter"><img src="img/shelter.png" alt="A picture of a webpage" /></a>
+              <a href="https://github.com/denalisk/shelter"><img src="./Kirsch Portfolio_files/shelter.png" alt="A picture of a webpage"></a>
               <p>Helter Shelter</p>
               <ul>
                 <li>A website made for a fictional animal adoption agency to practice with divs, floats, and media queries. Best viewed on a large screen.</li>
@@ -103,7 +103,7 @@
           <div class="col-sm-4">
             <div class="project panel-primary">
               <h4 class="panel-heading panel-primary">Attempted Wikipedia Rebuild</h4>
-              <a href="https://github.com/denalisk/wiki"><img src="img/wiki1.png" alt="A picture of a webpage" /></a>
+              <a href="https://github.com/denalisk/wiki"><img src="./Kirsch Portfolio_files/wiki1.png" alt="A picture of a webpage"></a>
               <p>Wiki Redux</p>
               <ul>
                 <li>A website attempting to reproduce the styling on the wikipedia homepage using basic bootstrap CSS elements.</li>
@@ -115,5 +115,6 @@
       </div>
     </div>
     <h6 class="required">Thanks for visiting. Copyright (c) 2017 Sam Kirsch and other attributed authors. Licensed under the MIT license.</h6>
-  </body>
-</html>
+  
+
+</body></html>
