add a title to the old man in the mountian photo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="welcome">
       <div class="center-align">
-        <img class="circle-img" src="img/old-man-rl.jpg" alt="A picture of the old man in the mountain" />
+        <img class="circle-img" src="img/old-man-rl.jpg" alt="A picture of the old man in the mountain" title="The Old Man in the Mountain fell down in 2003, but he still resides in the hearts of Granite Staters."/>
       </div>
       <div class="slide-up">
         <h1 class="spread center-align"><strong>Sam Kirsch</strong></h1>
